发布到ten2net/ppo-LunarLander-v2

--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ten2net/ppo/blob/main/notebooks/unit1/unit1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "njb_ProuHiOe"
       },
       "source": [
@@ -973,7 +963,7 @@
         "## Define a repo_id\n",
         "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
         "## CHANGE WITH YOUR REPO ID\n",
-        "repo_id = \"ThomasSimonini/ppo-LunarLander-v2\" # Change with your repo id, you can't push with mine 😄\n",
+        "repo_id = \"ten2net/ppo-LunarLander-v2\" # Change with your repo id, you can't push with mine 😄\n",
         "\n",
         "## Define the commit message\n",
         "commit_message = \"Upload PPO LunarLander-v2 trained agent\"\n",
@@ -1170,12 +1160,11 @@
       ],
       "private_outputs": true,
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true,
+      "gpuType": "T4"
     },
-    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.9.7",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
